superset/deploy-superset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset
  namespace: esb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset
  template:
    metadata:
      labels:
        app: superset
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
      - name: superset
        image: registry.tritux.com/easybulk3/superset:v3.0.1
        imagePullPolicy: Always
        command: ["/app/docker/docker-bootstrap.sh", "app-gunicorn"]
        ports:
        - containerPort: 8088
        securityContext:
          runAsUser: 0
