superset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: superset-ingress
  namespace: esb
spec:
  ingressClassName: caddy
  tls:
    - hosts:
        - analytics.easybulk.intra
      secretName: mycerts-caddy
  rules:
    - host: analytics.easybulk.intra
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: superset
                port:
                  number: 80
